--- a/www/contacts.html
+++ b/www/contacts.html
@@ -18,7 +18,7 @@
                         <ul>
                             <li><a href="catalog.html">Каталог</a></li>
                             <li><a href="rewies.html">Отзывы</a></li>
-                            <li><a href="contacts.html">Контакты</a></li>
+                            <li><a href="contacts.html" class="active">Контакты</a></li>
                             <li><a href="FAQ.html">FAQ</a></li>
                         </ul>
                     </nav>
@@ -31,23 +31,42 @@
         <section class="contacts">
             <div class="contacts-inner">
                 <h2>Наши контакты</h2>
-                <div class="contacts-wrap">
-                    <div class="cities">
-                        <a href="#"> Санкт-Петербург</a>
-                        <a href="#"> Москва</a>
-                        <a href="#">Великий Новгород</a>
-                    </div>
-                    <div class="contacts-content">
-                        <ul>
-                            <li>Спасский переулок, д. 14</li>
-                            <li>Тел: +7 812 800-8080</li>
-                            <li>Пн-Пт с 9-00 до 20-00</li>
-                        </ul>
-                        <div class="map">
-                            <img src="images/map.png" alt="">
-                        </div>
-                    </div>
+                <ul class="filter">
+                    <li class="filter-item">
+                      <a href="#" class="filter-link active j-contacts-link">Санкт-Петербург</a>
+                    </li>
+                    <li class="filter-item">
+                      <a href="#" class="filter-link j-contacts-link">Москва</a>
+                    </li>
+                    <li class="filter-item">
+                      <a href="#" class="filter-link j-contacts-link">Великий Новгород</a>
+                    </li>
+                </ul>
+                
+                <div class="contacts-item j-contacts-item active">
+                    <ul active>
+                        <li>Спасский переулок, д. 14</li>
+                        <li>Тел: +7 812 800-8080</li>
+                        <li>Пн-Пт с 9-00 до 20-00</li>
+                    </ul>
+                   <div   style="position:relative;      overflow:hidden;"><a href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт‑Петербург</a><a href="https://yandex.ru/maps/geo/sankt_peterburg/53000093/?from=mapframe&ll=30.314920%2C59.926225&utm_medium=mapframe&utm_source=maps&z=15" style="color:#eee;font-size:12px;position:absolute;top:14px;">Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Afb8dd4e6081fc96cded981ba1fb6dfcdf1e7b4b4e63feff3b751e8f521b60e52&amp;source=constructor" width="500" height="400" frameborder="0"></iframe></div>
                 </div>
+                <div class="contacts-item j-contacts-item">
+                    <ul>
+                        <li>ул.Малая Ордынка, д. 10</li>
+                        <li>Тел: +7 495 800-8080</li>
+                        <li>Пн-Пт с 9-00 до 20-00</li>
+                    </ul>
+                    <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a><a href="https://yandex.ru/maps/geo/moskva/53000094/?from=mapframe&ll=37.628386%2C55.743594&utm_medium=mapframe&utm_source=maps&z=15" style="color:#eee;font-size:12px;position:absolute;top:14px;">Москва — Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/?from=mapframe&ll=37.628386%2C55.743594&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1MzAwMDA5NBIa0KDQvtGB0YHQuNGPLCDQnNC-0YHQutCy0LAiCg2GeBZCFQEGX0I%2C&z=15" width="500" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+                </div>
+                <div class="contacts-item j-contacts-item">
+                    <ul>
+                        <li>Воскресенский бул, д. 3</li>
+                        <li>Тел: +7 813 800-8080</li>
+                        <li>Пн-Пт с 9-00 до 20-00</li>
+                    </ul>
+                    <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/24/veliky-novgorod/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Великий Новгород</a><a href="https://yandex.ru/maps/geo/velikiy_novgorod/53149420/?from=mapframe&ll=31.281341%2C58.520680&utm_medium=mapframe&utm_source=maps&z=13" style="color:#eee;font-size:12px;position:absolute;top:14px;">Великий Новгород — Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/?from=mapframe&ll=31.281341%2C58.520680&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1MzE0OTQyMBIt0KDQvtGB0YHQuNGPLCDQktC10LvQuNC60LjQuSDQndC-0LLQs9C-0YDQvtC0IgoNlCj6QRVoF2pC&z=13" width="500" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+                </div> 
             </div>
         </section>
     
