--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
                         <li><a href="catalog.html">Каталог</a></li>
                         <li><a href="rewies.html">Отзывы</a></li>
                         <li><a href="contacts.html">Контакты</a></li>
-                        <li><a href="FAQ.html">FAQ</a></li>
+                        <li><a href="FAQ.html" >FAQ</a></li>
                     </ul>
                 </nav>
                 <button class="burger j-burger">
@@ -36,36 +36,36 @@
                 </div>
             </div>
         </section>
-        <section class="services services-main">
+        <section class="catalog catalog-main">
             <h2>Наши работы</h2>
-            <div class="image">
-                <figure class="services-figure">
+            <ul class="image">
+                <li class="works-item">
                     <div class="figure-img">
                         <a href="#"><img src="images/серая бабочка в коробочке.png" alt="Серая бабочка в коробочке">
                         <figurecaption  class="caption">Бабочка такая</figurecaption></a>
                     </div>
-                </figure>
-                <figure class="services-figure">
+                </li>
+                <li class="works-item">
                     <div class="figure-img">
                         <a href="#"><img src="images/бабочки в упаковке.png" alt="Бабочки в упаковке">
                         <figurecaption  class="caption">Бабочка растакая</figurecaption></a>
                     </div>
-                </figure>
-                <figure class="services-figure">
+                </li>
+                <li class="works-item">
                     <div class="figure-img">
                         <a href="#"><img src="images/мужик в бабочке.png" alt="Мужик в бабочке">
                         <figurecaption  class="caption">Бабочка сякая
                         </figurecaption></a>
                     </div>
-                </figure>
-                <figure class="services-figure">
+                </li>
+                <li class="works-item">
                     <div class="figure-img">
                         <a href="#"><img src="images/котик в бабочке.png" alt="Котик в розовой бабочке">
                         <figurecaption  class="caption">Кривая
                         </figurecaption></a>
                     </div>
-                </figure>
-            </div> 
+                </li>
+            </ul> 
             <div class="btn">Все бабочки</div>
         </section>
 
