--- a/www/rewies.html
+++ b/www/rewies.html
@@ -16,7 +16,7 @@
                 <nav class="main-menu j-main-menu">
                     <ul>
                         <li><a href="catalog.html">Каталог</a></li>
-                        <li><a href="rewies.html">Отзывы</a></li>
+                        <li><a href="rewies.html" class="active">Отзывы</a></li>
                         <li><a href="contacts.html">Контакты</a></li>
                         <li><a href="FAQ.html">FAQ</a></li>
                     </ul>
