--- a/www/FAQ.html
+++ b/www/FAQ.html
@@ -18,7 +18,7 @@
                         <li><a href="catalog.html">Каталог</a></li>
                         <li><a href="rewies.html">Отзывы</a></li>
                         <li><a href="contacts.html">Контакты</a></li>
-                        <li><a href="FAQ.html">FAQ</a></li>
+                        <li><a href="FAQ.html" class="active">FAQ</a></li>
                     </ul>
                 </nav>
                 <button class="burger j-burger">
@@ -35,15 +35,15 @@
                         Как можно оплатить заказ?
                     </button> 
                     <div class="accordion-answear">
-                        <p>Принимая во внимание показатели успешности, реализация намеченных плановых заданий является качественно новой ступенью распределения внутренних резервов и ресурсов. В частности, перспективное планирование в значительной степени обусловливает важность укрепления моральных ценностей. Имеется спорная точка зрения, гласящая примерно следующее: независимые государства представлены в исключительно положительном свете. Сложно сказать, почему активно развивающиеся страны третьего мира, вне зависимости от их уровня, должны быть разоблачены.</p> 
+                        Принимая во внимание показатели успешности, реализация намеченных плановых заданий является качественно новой ступенью распределения внутренних резервов и ресурсов. В частности, перспективное планирование в значительной степени обусловливает важность укрепления моральных ценностей. Имеется спорная точка зрения, гласящая примерно следующее: независимые государства представлены в исключительно положительном свете. Сложно сказать, почему активно развивающиеся страны третьего мира, вне зависимости от их уровня, должны быть разоблачены.
                     </div> 
                 </div>
                 <div class="accordion">
                     <button class="accordion-btn j-accordion-btn">
-                        Как получитьготовый заказ?
+                        Как получить готовый заказ?
                     </button>
                     <div class="accordion-answear">
-                        <p> Учитывая  ключевые сценарии поведения, понимание сути ресурсосберегающих технологий требует определения и уточнения модели развития. Также как высокое качество позиционных исследований требует анализа поставленных обществом задач. А ещё интерактивные прототипы будут призваны к ответу.</p>
+                         Учитывая  ключевые сценарии поведения, понимание сути ресурсосберегающих технологий требует определения и уточнения модели развития. Также как высокое качество позиционных исследований требует анализа поставленных обществом задач. А ещё интерактивные прототипы будут призваны к ответу.
                     </div> 
                 </div>
             </div>
